More api endpoints used in frontend
